@@ -1,6 +1,11 @@
+1998-10-02  Mario Weilguni <mweilguni@kde.org>
+
+	* fixed that stupid segfault combined with the throughput graph
+
 1998-09-29  Mario Weilguni <mweilguni@kde.org>
 
 	* fixed a bug in the graphing code
+	* runtests.cpp: fixed typos
 
 1998-09-28  Harri Porten  <porten@kde.org>
 
